DEFEDIT-1533 Basic linting with Joker